--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
-    "marked": "^16.1.1",
+    "highlight.js": "^11.11.1",
+    "markdown-it": "^12.3.2",
     "vue": "^3.3.4",
     "vue-router": "^4.5.1"
   },
